k8s-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kouvenci-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kouvenci-backend
  template:
    metadata:
      labels:
        app: kouvenci-backend
    spec:
      containers:
        - name: backend
          # REPLACE WITH YOUR ACTUAL USERNAME
          image: ghcr.io/hezkiawan/kouvenci-backend:sha-2ea3d2633770465f836dd95037e49ff1de534c2c
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kouvenci-backend
  namespace: default
spec:
  selector:
    app: kouvenci-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kouvenci-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kouvenci-frontend
  template:
    metadata:
      labels:
        app: kouvenci-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/hezkiawan/kouvenci-frontend:sha-da0c67ab64f6de1731ef40a1b0fcea52ffb310a5
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: kouvenci-frontend
  namespace: default
spec:
  selector:
    app: kouvenci-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kouvenci-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kouvenci-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kouvenci-frontend
                port:
                  number: 3000
